# moonbeam

./: CONTRIBUTIONS.md  Cargo.toml  README.md  RELEASE.md
.github/workflows/: publish-docker.yml
benchmarking/: frame-weight-template.hbs
client/evm-tracing/: Cargo.toml
client/rpc-core/debug/: Cargo.toml
client/rpc-core/trace/: Cargo.toml
client/rpc-core/txpool/: Cargo.toml
client/rpc-core/types/: Cargo.toml
client/rpc/debug/: Cargo.toml
client/rpc/debug/src/: lib.rs
client/rpc/trace/: Cargo.toml
client/rpc/trace/src/: lib.rs
client/rpc/txpool/: Cargo.toml
core-primitives/: Cargo.toml
docker/: axia-relay.Dockerfile
moonbeam-types-bundle/: README.md  index.ts
node/: Cargo.toml
node/cli/: Cargo.toml  build.rs
node/cli-opt/: Cargo.toml
node/cli-opt/src/: account_key.rs
node/cli/src/: cli.rs  command.rs
node/perf-test/: Cargo.toml
node/perf-test/src/: command.rs
node/service/: Cargo.toml
node/service/src/: client.rs  lib.rs  rpc.rs
node/service/src/chain_spec/: mod.rs  moonbase.rs  moonbeam.rs  moonriver.rs  test_spec.rs
node/service/src/rpc/: tracing.rs
node/src/: main.rs  tests.rs
pallets/allychain-staking/: Cargo.toml  README.md  migrations.md
pallets/allychain-staking/src/: benchmarks.rs  inflation.rs  lib.rs  migrations.rs  mock.rs  set.rs  tests.rs  weights.rs
pallets/asset-manager/: Cargo.toml
pallets/asset-manager/src/: lib.rs  mock.rs  weights.rs
pallets/author-mapping/: Cargo.toml
pallets/author-mapping/src/: benchmarks.rs  lib.rs  migrations.rs  mock.rs  weights.rs
pallets/ethereum-chain-id/: Cargo.toml
pallets/maintenance-mode/: Cargo.toml
pallets/migrations/: Cargo.toml
pallets/migrations/src/: lib.rs
pallets/proxy-genesis-companion/: Cargo.toml
pallets/proxy-genesis-companion/src/: mock.rs
pallets/xcm-transactor/: Cargo.toml
pallets/xcm-transactor/src/: lib.rs  mock.rs  tests.rs
precompiles/allychain-staking/: Cargo.toml  StakingInterface.sol
precompiles/allychain-staking/src/: lib.rs  mock.rs  tests.rs
precompiles/assets-erc20/: Cargo.toml
precompiles/assets-erc20/src/: mock.rs
precompiles/balances-erc20/: Cargo.toml
precompiles/balances-erc20/src/: lib.rs  mock.rs
precompiles/crowdloan-rewards/: Cargo.toml
precompiles/crowdloan-rewards/src/: mock.rs
precompiles/pallet-democracy/: Cargo.toml
precompiles/pallet-democracy/src/: lib.rs  mock.rs  tests.rs
precompiles/relay-encoder/: Cargo.toml
precompiles/relay-encoder/src/: mock.rs  test_relay_runtime.rs
precompiles/utils/: Cargo.toml
precompiles/utils/macro/: Cargo.toml
precompiles/utils/src/: lib.rs  tests.rs
precompiles/utils/src/data/: xcm.rs
precompiles/xcm_transactor/: Cargo.toml
precompiles/xcm_transactor/src/: mock.rs
precompiles/xtokens/: Cargo.toml
precompiles/xtokens/src/: encoding.rs  mock.rs  tests.rs
primitives/account/: Cargo.toml
primitives/account/src/: lib.rs
primitives/ext/: Cargo.toml
primitives/rpc/debug/: Cargo.toml
primitives/rpc/evm-tracing-events/: Cargo.toml
primitives/rpc/txpool/: Cargo.toml
primitives/xcm/: Cargo.toml
primitives/xcm/src/: lib.rs
runtime/common/: Cargo.toml
runtime/common/src/: apis.rs  lib.rs  migrations.rs
runtime/evm_tracer/: Cargo.toml
runtime/evm_tracer/src/: lib.rs
runtime/moonbase/: Cargo.toml  build.rs
runtime/moonbase/src/: lib.rs  precompiles.rs
runtime/moonbase/tests/: integration_test.rs  runtime_apis.rs  xcm_tests.rs
runtime/moonbase/tests/common/: mod.rs
runtime/moonbase/tests/xcm_mock/: allychain.rs  relay_chain.rs
runtime/moonbeam/: Cargo.toml
runtime/moonbeam/src/: lib.rs  precompiles.rs
runtime/moonbeam/tests/: integration_test.rs  runtime_apis.rs
runtime/moonbeam/tests/common/: mod.rs
runtime/moonriver/: Cargo.toml
runtime/moonriver/src/: lib.rs  precompiles.rs
runtime/moonriver/tests/: integration_test.rs  runtime_apis.rs
runtime/moonriver/tests/common/: mod.rs
runtime/relay-encoder/: Cargo.toml
runtime/relay-encoder/src/: alphanet.rs  axia.rs  axiatest.rs  lib.rs
scripts/: README.md  _init_var.sh  embed-specs.sh  generate-allychain-specs.sh  generate-relay-specs.sh  generate-session-keys.sh  register-allychain-local.sh  register-allychain.sh  run-alphanet-allychain.sh
specs/: README.md
specs/alphanet/: allychain-embedded-specs-v8.json
specs/moonriver/: allychain-embedded-specs.json
tests/: package-lock.json  package.json
tests/contracts/: sources.ts
tests/contracts/compiled/: JoinCandidatesWrapper.json  StakingNominationAttaker.json
tests/para-tests-no-ci/: test-xcm-para.ts
tests/para-tests/moonriver/: test-balance-genesis.ts
tests/tests/: test-allychain-bond.ts  test-asset-manager.ts  test-author-mapping.ts  test-axia-api.ts  test-bn-128-bounds.ts  test-crowdloan.ts  test-democracy.ts  test-governance.ts  test-pallet-evm-transfer.ts  test-precompile-assets-erc20.ts  test-proxy-governance.ts  test-staking.ts  test-sudo.ts
tests/tests/test-balance/: test-balance-extrinsics.ts  test-balance-reducible.ts  test-balance-transfer-txwrapper-axlib.ts  test-balance-transfer.ts
tests/tests/test-precompile/: test-precompile-erc20.ts  test-precompile-modexp.ts  test-precompile-revert-attack.ts  test-precompile-staking.ts  test-precompile-xcm-transactor.ts  test-precompile-xtokens.ts
tests/util/: block.ts  constants.ts  para-node.ts
tests/util/tracer/: blockscout_tracer.min.json
tools/: README.md  launch.ts  package-lock.json  package.json
tools/github/: generate-runtimes-body.ts  list-pr-labels.ts  print-version-bump-info.ts
tools/test-scripts/: test-alpha.ts  test-staking.ts
