[workspace]
members = [
    'runtime/moonbeam',
    'runtime/moonriver',
    'runtime/moonbase',
    'node',
    'node/cli',
    'node/service',
    'pallets/migrations',
    'pallets/proxy-genesis-companion',
    'bin/utils/moonkey',
    'pallets/maintenance-mode',
    'precompiles/utils/macro',
]
exclude = ['bin/utils/moonkey']

[profile.release]
panic = 'unwind'

[patch.crates-io]
# axia:help
evm = { git = "https://github.com/axia-tech/evm", branch = "master" }
evm-runtime = { git = "https://github.com/axia-tech/evm", branch = "master" }
evm-gasometer = { git = "https://github.com/axia-tech/evm", branch = "master" }
ethereum = { git = "https://github.com/axia-tech/ethereum", branch = "master" }
