[package]
authors = ['AxiaStake']
edition = '2018'
homepage = 'https://moonbeam.network'
license = 'GPL-3.0-only'
name = 'moonbeam-core-primitives'
repository = 'https://github.com/AxiaStake/moonbeam/'
version = '0.1.1'

[dependencies]
fp-self-contained = { git = "https://github.com/axia-tech/frontier", branch = "master", default-features = false }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
account = { path = "../primitives/account", default-features = false }

[features]
default = ["std"]
std = ["fp-self-contained/std", "sp-core/std", "sp-runtime/std", "account/std"]
