[package]
name = "moonbeam-cli"
version = "0.15.0"
authors = ["AxiaStake"]
edition = "2018"

[dependencies]
log = "0.4.8"
structopt = "0.3.8"
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1" }

sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-cli = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-service = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-tracing = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-telemetry = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
frame-benchmarking-cli = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
try-runtime-cli = { git = "https://github.com/axia-tech/axlib", branch = "dev", optional = true }

cumulus-client-cli = { git = "https://github.com/axia-tech/cumulus", branch = "master" }
cumulus-client-service = { git = "https://github.com/axia-tech/cumulus", branch = "master" }
cumulus-primitives-core = { git = "https://github.com/axia-tech/cumulus", branch = "master" }
nimbus-primitives = { git = "https://github.com/axia-tech/nimbus", branch = "94e54bd" }

axia-allychain = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-service = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-cli = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-primitives = { git = "https://github.com/axia-tech/axia", branch = "dev" }

service = { package = "moonbeam-service", path = "../service", default-features = false }
cli-opt = { package = "moonbeam-cli-opt", path = "../cli-opt", default-features = false }
perf-test = { path = "../perf-test" }

[build-dependencies]
axlib-build-script-utils = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

[features]
default = [
	"wasmtime",
	"alphanet-native",
	"moonbase-native",
	"moonriver-native",
	"moonbeam-native",
]

alphanet-native = ["axia-service/alphanet-native"]

moonbase-native = ["service/moonbase-native", "alphanet-native"]
moonriver-native = ["service/moonriver-native"]
moonbeam-native = ["service/moonbeam-native"]

wasmtime = ["sc-cli/wasmtime"]
runtime-benchmarks = ["service/runtime-benchmarks"]
try-runtime = ["try-runtime-cli", "service/try-runtime"]
