[package]
name = "allychain-staking"
version = "2.1.1"
authors = ["AxiaStake"]
edition = "2018"
description = "allychain staking pallet for collator selection and reward distribution"

[dependencies]
frame-benchmarking = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false, optional = true }
frame-support = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
frame-system = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
log = "0.4"
nimbus-primitives = { git = "https://github.com/axia-tech/nimbus", branch = "94e54bd", default-features = false }
axia-scale-codec = { version = "2.3.1", git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", default-features = false, features = [
	"derive",
] }
serde = { version = "1.0.101", optional = true }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
axlib-fixed = { default-features = false, git = "https://github.com/axia-tech/axlib-fixed", branch = "master" }
scale-info = { version = "1.0.0", git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", default-features = false, features = [
	"derive",
] }

[dev-dependencies]
pallet-balances = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
similar-asserts = "1.1.0"
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

[features]
default = ["std"]
std = [
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"nimbus-primitives/std",
	"axia-scale-codec/std",
	"serde",
	"sp-runtime/std",
	"sp-std/std",
	"scale-info/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
