[package]
name = "pallet-asset-manager"
version = "0.1.0"
authors = ["AxiaStake"]
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1", default-features = false, features = [
	"derive",
] }
sp-runtime = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-std = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
xcm = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }
xcm-primitives = { path = "../../primitives/xcm/", default-features = false }
scale-info = { version = "1.0.0", git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", default-features = false, features = [
	"derive",
] }

frame-support = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
frame-system = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

[features]
default = ["std"]
std = [
	"serde",
	"axia-scale-codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"xcm/std",
	"frame-system/std",
	"xcm-primitives/std",
	"scale-info/std",
]
