[package]
name = "pallet-author-mapping"
version = "2.0.4"
authors = ["AxiaStake"]
edition = "2018"
description = "Maps AuthorIds to AccountIds Useful for associating consensus authors with in-runtime accounts"

[dependencies]
log = { version = "0.4", default-features = false }
nimbus-primitives = { git = "https://github.com/axia-tech/nimbus", branch = "master", default-features = false }
frame-support = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
frame-system = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1", default-features = false, features = [
	"derive",
] }
serde = { version = "1.0.101", optional = true }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
frame-benchmarking = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false, optional = true }
scale-info = { version = "1.0.0", git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", default-features = false, features = [
	"derive",
] }

[dev-dependencies]
sp-io = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
pallet-balances = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

[features]
default = ["std"]
std = [
	"log/std",
	"nimbus-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"axia-scale-codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"scale-info/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
