[package]
authors = ["AxiaStake"]
edition = "2018"
name = "pallet-ethereum-chain-id"
version = "1.0.0"

[dependencies]
axia-scale-codec = { version = "2.3.1", git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", default-features = false, features = [
    "derive",
] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
scale-info = { version = "1.0.0", git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", default-features = false, features = [
    "derive",
] }

frame-support = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
frame-system = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }

[features]
default = ["std"]
std = [
    "axia-scale-codec/std",
    "serde",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
]
try-runtime = ["frame-support/try-runtime"]
