[package]
name = "pallet-maintenance-mode"
authors = ["PureStake"]
description = "Puts a FRAME-based runtime into maintenance mode where restricted interactions are allowed."
edition = "2018"
version = "0.1.0"

[dependencies]
log = "0.4"

# Axlib
frame-support = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
frame-system = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
parity-scale-codec = { version = "2.2", default-features = false }
scale-info = { version = "1.0", default-features = false, features = [
	"derive",
] }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-runtime/std",
]
try-runtime = ["frame-support/try-runtime"]
