[package]
name = "pallet-maintenance-mode"
version = "0.1.0"
authors = ["AxiaStake"]
edition = "2018"
description = "Puts a FRAME-based runtime into maintenance mode where restricted interactions are allowed."

[dependencies]
frame-support = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
frame-system = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
log = "0.4"
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
axia-scale-codec = { version = "2.3.1", git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", default-features = false }
scale-info = { version = "1.0.0", git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", default-features = false, features = [
	"derive",
] }

[dev-dependencies]
sp-io = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"scale-info/std",
]
try-runtime = ["frame-support/try-runtime"]
