[package]
name = "pallet-proxy-genesis-companion"
version = "0.1.0"
authors = ["AxiaStake"]
edition = "2018"
description = "A simple pallet that expands pallet-proxy with a genesis configuration"

[dependencies]
frame-support = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
frame-system = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
pallet-proxy = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
axia-scale-codec = { version = "2.3.1", git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", default-features = false }
scale-info = { version = "1.0.0", git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", default-features = false, features = [
	"derive",
] }

[dev-dependencies]
sp-io = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
pallet-balances = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
serde = "1.0.124"

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"scale-info/std",
	"pallet-proxy/std",
]
try-runtime = ["frame-support/try-runtime"]
