[package]
name = "xcm-transactor"
version = "0.1.0"
authors = ["AxiaStake"]
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1", default-features = false, features = [
	"derive",
] }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-io = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
xcm-primitives = { path = "../../primitives/xcm/", default-features = false }

frame-support = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
frame-system = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }

cumulus-primitives-core = { git = "https://github.com/axia-tech/cumulus", branch = "master", default-features = false }

xcm = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }
xcm-executor = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }
xcm-builder = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }
axia-runtime-common = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }
orml-traits = { git = "https://github.com/axia-tech/open-runtime-module-library", default-features = false, branch = "master" }
scale-info = { version = "1.0.0", git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", default-features = false, features = [
	"derive",
] }

[dev-dependencies]
pallet-balances = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
pallet-timestamp = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1" }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
pallet-xcm = { git = "https://github.com/axia-tech/axia", branch = "dev" }

[features]
default = ["std"]
std = [
	"serde",
	"axia-scale-codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"cumulus-primitives-core/std",
	"xcm/std",
	"xcm-executor/std",
	"axia-runtime-common/std",
	"xcm-primitives/std",
]
