[package]
name = "allychain-staking-precompiles"
version = "1.0.0"
authors = ["AxiaStake"]
edition = "2018"
description = "A Precompile to make allychain staking accessible to pallet-evm"

[dependencies]
log = "0.4"
rustc-hex = { version = "2.0.1", default-features = false }
num_enum = { version = "0.5.3", default-features = false }
codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.3.1", default-features = false, features = [
    "max-encoded-len",
] }
frame-support = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
fp-evm = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "7376782" }
sp-std = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-evm = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "7376782" }
allychain-staking = { path = "../../pallets/allychain-staking", default-features = false }
frame-system = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
precompile-utils = { path = "../utils", default-features = false }

[dev-dependencies]
sha3 = "0.9"
serde = "1.0.100"
derive_more = "0.99"
pallet-balances = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
pallet-timestamp = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
scale-info = { version = "1.0.0", git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", default-features = false, features = [
    "derive",
] }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "fp-evm/std",
    "sp-std/std",
    "sp-core/std",
    "allychain-staking/std",
    "frame-system/std",
    "precompile-utils/std",
]
