[package]
name = "pallet-evm-precompile-balances-erc20"
version = "0.1.0"
authors = ["AxiaStake"]
edition = "2018"
description = "A Precompile to expose a Balances pallet through an ERC20-compliant interface."

[dependencies]
log = "0.4"
slices = "0.2.0"

sp-std = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.3.1", default-features = false, features = [
    "max-encoded-len",
] }
frame-support = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
frame-system = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }

pallet-balances = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-evm = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "master" }
fp-evm = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "master" }
precompile-utils = { path = "../utils", default-features = false }
num_enum = { version = "0.5.3", default-features = false }

[dev-dependencies]
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
pallet-timestamp = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
serde = { version = "1.0.100" }
derive_more = { version = "0.99" }
sha3 = "0.8"
scale-info = { version = "1.0.0", git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", default-features = false, features = [
    "derive",
] }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-std/std",
    "sp-core/std",
    "sp-io/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-evm/std",
    "pallet-balances/std",
    "fp-evm/std",
    "precompile-utils/std",
]
