[package]
name = "crowdloan-rewards-precompiles"
version = "0.6.0"
authors = ["AxiaStake"]
edition = "2018"
description = "A Precompile to make crowdloan rewards accessible to pallet-evm"

[dependencies]
log = "0.4"
rustc-hex = { version = "2.0.1", default-features = false }

frame-support = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
fp-evm = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "master" }
sp-std = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-evm = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "master" }
pallet-crowdloan-rewards = { git = "https://github.com/axia-tech/crowdloan-rewards", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
precompile-utils = { path = "../utils", default-features = false }
num_enum = { version = "0.5.3", default-features = false }

[dev-dependencies]
sha3 = "0.9"
sp-io = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.3.1", default-features = false, features = [
    "max-encoded-len",
] }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
pallet-balances = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
pallet-timestamp = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
pallet-scheduler = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
serde = "1.0.100"
derive_more = "0.99"
cumulus-primitives-allychain-inherent = { git = "https://github.com/axia-tech/cumulus", default-features = false, branch = "master" }
cumulus-pallet-allychain-system = { git = "https://github.com/axia-tech/cumulus", default-features = false, branch = "master" }
cumulus-primitives-core = { git = "https://github.com/axia-tech/cumulus", default-features = false, branch = "master" }
cumulus-test-relay-sproof-builder = { git = "https://github.com/axia-tech/cumulus", default-features = false, branch = "master" }
scale-info = { version = "1.0.0", git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", default-features = false, features = [
    "derive",
] }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "fp-evm/std",
    "sp-std/std",
    "sp-core/std",
    "pallet-crowdloan-rewards/std",
    "frame-system/std",
    "precompile-utils/std",
    "pallet-evm/std",
]
