[package]
name = "relay-encoder-precompiles"
version = "0.1.0"
authors = ["AxiaStake"]
edition = "2018"
description = "A Precompile to make relay staking calls encoding accessible to pallet-evm"

[dependencies]
sp-core = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
log = "0.4"
rustc-hex = { version = "2.0.1", default-features = false }
fp-evm = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "master" }
pallet-evm = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "master" }
frame-support = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
cumulus-primitives-core = { git = "https://github.com/axia-tech/cumulus", default-features = false, branch = "master" }

axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1", default-features = false, features = [
    "derive",
] }
sp-runtime = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-staking = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
frame-system = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-std = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
precompile-utils = { path = "../utils", default-features = false }
num_enum = { version = "0.5.3", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sha3 = "0.9"
pallet-balances = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
pallet-timestamp = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
cumulus-pallet-allychain-system = { git = "https://github.com/axia-tech/cumulus", branch = "master" }
derive_more = "0.99"
serde = "1.0.100"
hex-literal = "0.3.3"
scale-info = { version = "1.0.0", git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", default-features = false, features = [
    "derive",
] }

[features]
default = ["std"]
std = [
    "precompile-utils/std",
    "fp-evm/std",
    "pallet-evm/std",
    "frame-support/std",
    "sp-std/std",
    "axia-scale-codec/std",
    "pallet-staking/std",
    "cumulus-primitives-core/std",
    "sp-runtime/std",
    "axia-scale-codec/std",
    "frame-system/std",
]
