[package]
name = "precompile-utils"
version = "0.1.0"
authors = ["AxiaStake"]
edition = "2018"
description = "Utils to write EVM precompiles."

[dependencies]
log = "0.4"
sha3 = { version = "0.9", default-features = false }
num_enum = { version = "0.5.3", default-features = false }

sp-std = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.3.1", default-features = false }
frame-support = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
frame-system = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }

pallet-evm = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "master" }
fp-evm = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "master" }
xcm = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }

precompile-utils-macro = { path = "macro" }

[dev-dependencies]
hex-literal = "0.3.1"

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-std/std",
    "sp-core/std",
    "sp-io/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-evm/std",
    "fp-evm/std",
]
