[package]
name = "xtokens-precompiles"
version = "0.1.0"
authors = ["AxiaStake"]
edition = "2018"
description = "A Precompile to make xtokens accessible to pallet-evm"

[dependencies]
log = "0.4"
rustc-hex = { version = "2.0.1", default-features = false }

frame-support = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
fp-evm = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "7376782" }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }

pallet-evm = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "7376782" }
orml-xtokens = { git = "https://github.com/axia-tech/open-runtime-module-library", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
precompile-utils = { path = "../utils", default-features = false }
num_enum = { version = "0.5.3", default-features = false }
xcm = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }
xcm-primitives = { path = "../../primitives/xcm/", default-features = false }

[dev-dependencies]
sha3 = "0.9"
serde = "1.0.100"
sp-io = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
derive_more = "0.99"
pallet-balances = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
pallet-timestamp = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.3.1", default-features = false, features = [
    "max-encoded-len",
] }
cumulus-primitives-core = { git = "https://github.com/axia-tech/cumulus", branch = "master" }
pallet-xcm = { git = "https://github.com/axia-tech/axia", branch = "dev" }
xcm-builder = { git = "https://github.com/axia-tech/axia", branch = "dev" }
xcm-executor = { git = "https://github.com/axia-tech/axia", branch = "dev" }
scale-info = { version = "1.0.0", git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", features = [
    "derive",
] }
[features]
default = ["std"]
std = [
    "frame-support/std",
    "fp-evm/std",
    "sp-std/std",
    "sp-core/std",
    "frame-system/std",
    "precompile-utils/std",
    "pallet-evm/std",
    "orml-xtokens/std",
    "xcm-primitives/std",
]
