[package]
authors = ['AxiaStake']
edition = '2018'
homepage = 'https://moonbeam.network'
license = 'GPL-3.0-only'
name = 'account'
repository = 'https://github.com/AxiaStake/moonbeam/'
version = '0.1.1'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", default-features = false, optional = true, features = [
	"derive",
] }
axia-scale-codec = { version = "2.3.1", git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "1.0.0", git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", default-features = false, features = [
	"derive",
] }
log = "0.4"
hex = { version = "0.4", default-features = false }
sha3 = { version = "0.9", default-features = false }

blake2-rfc = { version = "0.2.18", default-features = false, optional = true }
sp-runtime-interface = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }

sp-core = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-std = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
libsecp256k1 = { version = "0.6", default-features = false, features = [
	"hmac",
] }

[dev-dependencies]
hex = "0.4.3"

[features]
default = ["std"]
std = [
	"axia-scale-codec/std",
	"serde/std",
	"hex/std",
	"sha3/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"full_crypto",
	"libsecp256k1/std",
]

full_crypto = [
	"blake2-rfc",
	"sp-runtime-interface/disable_target_static_assertions",
]
